fix(frontend): limit note width on mobile

--- a/frontend/public/assets/css/03-editor-view.css
+++ b/frontend/public/assets/css/03-editor-view.css
@@ -162,6 +162,10 @@
   padding: 13px; /* (50px - 24px) / 2 */
 }
 
+.note {
+  max-width: 100vw;
+}
+
 .note-content {
   max-width: var(--max-content-width);
   margin: auto;
